{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 12,
  "lineage": "ff489dae-6380-3169-fd47-0f30503bdd0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "christanyk_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f5a0b78d6089704",
            "arn": "arn:aws:ec2:us-east-1:255945442255:instance/i-0da2f0231a3f413db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da2f0231a3f413db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e47802017a3010a5",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_ip": "3.234.224.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09317ee84996cbe21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f954ee2ba48dc29",
            "tags": {
              "Name": "christanyk-instance"
            },
            "tags_all": {
              "Name": "christanyk-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0623b79b39958e80b"
            ]
          },
          "dependencies": [
            "aws_security_group.christanyk_sg",
            "aws_subnet.christanyk_subnet",
            "aws_vpc.christanyk_vpc",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "christanyk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:internet-gateway/igw-063777bbcb436cf49",
            "id": "igw-063777bbcb436cf49",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanyk-igw"
            },
            "tags_all": {
              "Name": "christanyk-igw"
            },
            "vpc_id": "vpc-0b5a54e08758322c1"
          },
          "dependencies": [
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "christanyk_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:route-table/rtb-03d9391fd2e8b81d0",
            "id": "rtb-03d9391fd2e8b81d0",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063777bbcb436cf49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "christanyk-rt"
            },
            "tags_all": {
              "Name": "christanyk-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a54e08758322c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.christanyk_igw",
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "christanyk_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e12c4758d3e8e99e",
            "route_table_id": "rtb-03d9391fd2e8b81d0",
            "subnet_id": "subnet-08f954ee2ba48dc29"
          },
          "dependencies": [
            "aws_internet_gateway.christanyk_igw",
            "aws_route_table.christanyk_rt",
            "aws_subnet.christanyk_subnet",
            "aws_vpc.christanyk_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "christanyk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:security-group/sg-0623b79b39958e80b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0623b79b39958e80b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250315030422673300000001",
            "name_prefix": "terraform-",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "christanyk-sg"
            },
            "tags_all": {
              "Name": "christanyk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a54e08758322c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "christanyk_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-08f954ee2ba48dc29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f954ee2ba48dc29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "christanyk-public-subnet"
            },
            "tags_all": {
              "Name": "christanyk-public-subnet"
            },
            "vpc_id": "vpc-0b5a54e08758322c1"
          },
          "dependencies": [
            "aws_vpc.christanyk_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "christanyk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:vpc/vpc-0b5a54e08758322c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0656c76cd4f8c969f",
            "default_route_table_id": "rtb-0c940dc6c60e79e70",
            "default_security_group_id": "sg-03fe09e6b621bd680",
            "dhcp_options_id": "dopt-0191054b044ac1c99",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5a54e08758322c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c940dc6c60e79e70",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanyk-vpc"
            },
            "tags_all": {
              "Name": "christanyk-vpc"
            }
          }
        }
      ]
    }
  ]
}